--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="intro">
             <div class="container text-center">
                 <img class="profile-image rounded-circle"  src="SURESH123456.jpg"  alt="">
-                <h1 class="name">D.KUMAR SURESH</h1>
+                <h1 class="name">D.SURESH</h1>
                 <div class="title">Full Stack Developer</div>
                 <div class="profile">
                     <p>Sphere is a one page Bootstrap 5 portfolio template designed for developers. Profile intro goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet.</p>
